--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                                 <h3 class="title mb-3"><a href="https://www.mindseye.game" target="_blank">Mindseye</a></h3>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>MindsEye is a narrative driven, single-player action-adventure thriller set in the near-future fictional desert city of Redrock. I was involved with the development of 4 story missions using Unreal Engine and LUA.</p>
+                                    <p>MindsEye is a narrative driven, single-player action-adventure thriller set in the near-future fictional desert city of Redrock. I was involved with the development of main line story missions using Unreal Engine and LUA.</p>
 </p>
                                 </div><!--//desc-->         
-                                <a class="btn btn-cta-secondary" href="https://arran-d-smedley.itch.io/user-interface-project" target="_blank"><i class="fas fa-thumbs-up"></i>Available on PC, PS5 and Xbox</a>                 
+                                <a class="btn btn-cta-secondary" href="https://www.mindseye.game" target="_blank"><i class="fas fa-thumbs-up"></i>Available on PC, PS5 and Xbox</a>                 
                             </div><!--//item-->
                             <hr class="divider" />
                             
