--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                             <div class="item featured text-center">
                                 <div class="video-wrapper"></div>
                                     <div class="featured-image has-ribbon">
-                                        <iframe width="640" height="360" 
-                                                src="https://www.youtube.com/embed/4s3jVJaFrbM" 
+                                        <iframe src="https://www.youtube.com/embed/4s3jVJaFrbM" 
                                                 title="Mindseye" 
                                                 frameborder="0" 
                                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
