--- a/index.html
+++ b/index.html
@@ -69,20 +69,14 @@
                         <h2 class="heading">Latest Projects</h2>
                         <div class="content">                    
                             <div class="item featured text-center">
-                                <div class="video-wrapper"></div>
-                                    <div class="featured-image has-ribbon">
-                                        <iframe src="https://www.youtube.com/embed/4s3jVJaFrbM" 
-                                                title="Mindseye" 
-                                                frameborder="0" 
-                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                                                allowfullscreen>
-                                        </iframe>
-                                        </a>
-                                        <div class="ribbon">
-                                            <div class="text">New</div>
-                                        </div>
-                                    </div>
-                            </div>
+                                <div class="video-wrapper">
+                                    <iframe src="https://www.youtube.com/embed/4s3jVJaFrbM" 
+                                            title="Introducing Mindseye" 
+                                            frameborder="0" 
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                            allowfullscreen>
+                                    </iframe>
+                                </div>
                                 <h3 class="title mb-3"><a href="https://www.mindseye.game" target="_blank">Mindseye</a></h3>
                                     
                                 <div class="desc text-left">                                    
