--- a/index.html
+++ b/index.html
@@ -80,8 +80,18 @@
                                 <h3 class="title mb-3"><a href="https://www.mindseye.game" target="_blank">Mindseye</a></h3>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>MindsEye is a narrative driven, single-player action-adventure thriller set in the near-future fictional desert city of Redrock. I was involved with the development of main line story missions using Unreal Engine and LUA.</p>
-                                </div><!--//desc-->         
+                                    <p>Mindseye is an episodic action-adventure game blending cinematic storytelling with explosive gameplay, developed in-house at Build A Rocket Boy. 
+                                        As a Technical Designer, I worked across multiple missions from early prototyping through to polish, contributing to gameplay systems, scripting, and level logic. 
+                                        My role focused on bridging design and engineering, ensuring that mission flow, AI behaviours, and in-game events all aligned with the narrative intent and player experience.
+                                        I collaborated closely with designers, artists, and programmers to implement mission logic, debug scripting issues, and ensure each mission hit our quality bar. Below are some highlights of the missions I contributed to.</p>
+                                </div><!--//desc-->
+                                <figure>
+                                    <img src="assets/images/projects/RMZPart2.PNG" alt="Trulli" style="width:100%">
+                                    <figcaption>🛰 A Vital Extraction - 
+                                        One of the final missions in the game, A Vital Extraction delivers a high-stakes, high-speed chase through a cinematic urban landscape. 
+                                        I was responsible for designing and scripting the entire escape route, orchestrating car and drone pursuers to create a relentless sense of pressure. 
+                                        This mission stands out as one of the most action-packed sequences in the game, blending tight pacing, dynamic threats, and explosive set-pieces to push the player’s driving skills to the limit.</figcaption>
+                                </figure>      
                                 <a class="btn btn-cta-secondary" href="https://www.mindseye.game" target="_blank"><i class="fas fa-thumbs-up"></i>Available on PC, PS5 and Xbox</a>                 
                             </div><!--//item-->
                             <hr class="divider" />
