--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </div><!--//desc-->
                                 <figure>
                                     <img src="assets/images/projects/RMZPart2.PNG" alt="Trulli" style="width:100%">
-                                    <figcaption>🛰 A Vital Extraction - 
+                                    <figcaption><em>A Vital Extraction</em><br>
                                         One of the final missions in the game, A Vital Extraction delivers a high-stakes, high-speed chase through a cinematic urban landscape. 
                                         I was responsible for designing and scripting the entire escape route, orchestrating car and drone pursuers to create a relentless sense of pressure. 
                                         This mission stands out as one of the most action-packed sequences in the game, blending tight pacing, dynamic threats, and explosive set-pieces to push the player’s driving skills to the limit.</figcaption>
