Added more images

--- a/index.html
+++ b/index.html
@@ -90,8 +90,27 @@
                                     <figcaption><em>A Vital Extraction</em><br>
                                         One of the final missions in the game, A Vital Extraction delivers a high-stakes, high-speed chase through a cinematic urban landscape. 
                                         I was responsible for designing and scripting the entire escape route, orchestrating car and drone pursuers to create a relentless sense of pressure. 
-                                        This mission stands out as one of the most action-packed sequences in the game, blending tight pacing, dynamic threats, and explosive set-pieces to push the player’s driving skills to the limit.</figcaption>
-                                </figure>      
+                                        This mission stands out as one of the most action-packed sequences in the game, blending tight pacing, dynamic threats, and explosive set-pieces to push the player’s driving skills to the limit.
+                                    </figcaption>
+                                </figure>  
+                                <figure>
+                                    <img src="assets/images/projects/SaveSilva.PNG" alt="Trulli" style="width:100%">
+                                    <figcaption><em>Oh Lily!</em><br>
+                                        A standout mission in Mindseye, Oh Lily! takes the player through a series of escalating encounters, culminating in the game’s only boss fight. 
+                                        I was responsible for designing and scripting all major gameplay moments—from carefully tuned enemy placements to intense combat sequences. 
+                                        The mission features a dramatic mid-point where the player’s vehicle is destroyed in a scripted event, forcing a change in gameplay style. 
+                                        With support from friendly drones and a cinematic climax, this mission showcases a blend of pacing, spectacle, and technical design that makes it one of the most memorable experiences in the game.
+                                    </figcaption>
+                                </figure>
+                                <figure>
+                                    <img src="assets/images/projects/FMS.PNG" alt="Trulli" style="width:100%">
+                                    <figcaption><em>Seeking Doctor Morrison</em><br>
+                                        In Seeking Doctor Morrison, the player is on a tense search for a hidden underground silo—but it’s far from a quiet journey. 
+                                        I designed and scripted a dynamic series of drone ambushes that escalate in intensity, creating a constant sense of action while subtly guiding the player toward the objective. 
+                                        The encounter pacing was carefully tuned to keep players engaged and on edge, using enemy positioning and timing to shape both challenge and direction. 
+                                        This mission balances environmental storytelling with tightly controlled combat scenarios, making it a key moment of tension and discovery in the game.
+                                    </figcaption>
+                                </figure>     
                                 <a class="btn btn-cta-secondary" href="https://www.mindseye.game" target="_blank"><i class="fas fa-thumbs-up"></i>Available on PC, PS5 and Xbox</a>                 
                             </div><!--//item-->
                             <hr class="divider" />
