--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <h3 class="title mb-3"><a href="https://www.mindseye.game" target="_blank">Mindseye</a></h3>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>Mindseye is an episodic action-adventure game blending cinematic storytelling with explosive gameplay, developed in-house at Build A Rocket Boy. 
+                                    <p>Mindseye is an episodic action-adventure game blending cinematic storytelling with explosive gameplay, developed using Unreal Engine 5 and Lua at Build A Rocket Boy.
                                         As a Technical Designer, I worked across multiple missions from early prototyping through to polish, contributing to gameplay systems, scripting, and level logic. 
                                         My role focused on bridging design and engineering, ensuring that mission flow, AI behaviours, and in-game events all aligned with the narrative intent and player experience.
                                         I collaborated closely with designers, artists, and programmers to implement mission logic, debug scripting issues, and ensure each mission hit our quality bar. Below are some highlights of the missions I contributed to.</p>
