--- a/index.html
+++ b/index.html
@@ -114,7 +114,14 @@
                                 <a class="btn btn-cta-secondary" href="https://www.mindseye.game" target="_blank"><i class="fas fa-thumbs-up"></i>Available on PC, PS5 and Xbox</a>                 
                             </div><!--//item-->
                             <hr class="divider" />
-                            
+                            <div class="item row">
+                                <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/everywhere.jpg" alt="Everywhere" />
+                                </a>
+                                <div class="desc col-md-8 col-12">
+                                    <h3 class="title"><a>Everywhere</a></h3>
+                                    <p class="mb-2">At Build A Rocket Boy, I worked on the AAA open-world title Everywhere, which has reached its Alpha stage but has not yet been fully released. My primary role was designing and scripting the game’s introductory missions, which teach new players the core mechanics and systems. This involved crafting a smooth and engaging onboarding experience that introduces controls, objectives, and sandbox elements in a clear and intuitive way. These early missions were key to setting the tone for player engagement and ensuring a strong first impression of the game world.</p>
+                                </div><!--//desc-->                          
+                            </div><!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://arran-d-smedley.itch.io/user-interface-project" target="_blank">
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/main1.png" alt="Fantasy & Ash" />
