--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
+                                <a class="col-md-4 col-12" href="" target="_blank"></a>
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/everywhere.jpg" alt="Everywhere" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
