--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <p>Technical Designer with experience in mission scripting, game systems, and automation testing. A
                             self-motivated and detail-oriented designer with a strong foundation in programming and technical
                             implementation. I've worked across multiple AAA titles in the games industry, bringing missions and systems
-                            to life using Unreal Engine and LUA scripting.</p>
+                            to life using Unreal Engine and Lua.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
