--- a/index.html
+++ b/index.html
@@ -190,22 +190,33 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(December 2022 - Current)</span></h3>
-                                <p>Initially joined as an Associate Technical Designer, promoted to Technical Designer in July 2024.<br>
-                                    - Worked on two large-scale projects: Everywhere and Mindseye.<br>
-                                    - Developed missions and systems using Unreal Engine and LUA scripting.<br>
-                                    - Collaborated with multi-disciplinary teams to enhance gameplay and systems.</p>
+                                <p> - Promoted from Associate to Technical Designer in May 2023<br>
+                                    - Designed and implemented missions and gameplay systems for two largescale projects: <b>Everywhere</b> and <b>Mindseye</b>.<br>
+                                    - Used <b>Lua</b> scripting and <b>Unreal Engine</b> to create interactive mission content and systemic gameplay features.<br>
+                                    - Collaborated with cross-functional teams (design, code, art) to streamline development workflows.<br>
+                                    - Contributed to debugging, iteration tools, and internal mission scripting frameworks.
+                                </p>
                             </div><!--//item-->
 							<div class="item">
                                 <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - December 2022)</span></h3>
-                                <p>At The Shopworks, I maintained the automation and QA of the applications. Previously I constructed and organised all the automation testing. Covering all aspects of the applications, these automation tests were created using Testim an automation tool that uses test grids and NodeJS to construct different test cases. </p>
+                                <p> - Built automated testing pipelines using Testim and <b>NodeJS</b>, integrated with <b>GitLab CI/CD</b>.<br>
+                                    - Developed <b>Python</b> and <b>SQL</b> scripts to support analytics dashboards and internal reporting.<br>
+                                    - Participated in <b>Agile</b> ceremonies, sprint planning, and QA reviews acrossmulti-team product releases.<br>
+                                </p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.calnexsol.com/en/">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
-                                <p>As a Software Engineer Intern at Calnex Solutions I got hands on experience in editing programming code via updating the Delphi IDE within the company. In conjunction with this, I was given practical python scripting experience measuring network performance for a client of Calnex. Furthermore, I provided ABB testing for certain components within the Calnex solutions software. Each task required high levels of team communication within a scrum and cohesion with the scrum manager to ensure that whomever requested the task be done, whether that be a client or Calnex management were more than satisfied with the job done.</p>
+                                <p> - Created <b>Python-based</b> scripts for network testing using internal APIs and the Delphi IDE. <br>
+                                    - Conducted automated ABB regression tests for telecom tools.<br>
+                                    - Worked within a Scrum team on rapid iteration cycles.<br>
+                                </p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.viavisolutions.com/en-us">Viavi Solutions</a></span> <span class="year">(June 2019 - September 2019)</span></h3>
-                                <p>As a Software Engineering Intern at Viavi Solutions, my main task was taking on a project which anonymised and encrypted geo-locational data to ensure the protection of client data and personal information. My other day-to-day requirements consisted of tasks such as: Fixing bugs and writing scripts in C#, Handling highly stressed situations / unexpected errors in an eficient manner, Assisting in the commercialization of service and project management software, Backlog negotiation and project estimations, Coding, testing and fixing programming errors, Communication with clients and representing Viavi in a professional mannerism, Working in conjunction with a core team and a scrum master.</p>
+                                <p> - Contributed to secure geo-location data workflows using <b>C#</b>.
+                                    - Collaborated with QA and development to resolve high-priority bugs and automate test cases.
+                                    - Supported customer deliverables during project deadlines.
+                                </p>
                             </div><!--//item-->
                            
                             
