--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://arran-d-smedley.itch.io/user-interface-project" target="_blank">
+                                <a class="col-md-4 col-12" href="" target="_blank">
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/everywhere.jpg" alt="Fantasy & Ash" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://arran-d-smedley.itch.io/user-interface-project" target="_blank">EVERYWHERE</a></h3>
+                                    <h3 class="title"><a href="" target="_blank">EVERYWHERE</a></h3>
                                     <p class="mb-2">At Build A Rocket Boy, I worked on the AAA open-world title Everywhere, which has reached its Alpha stage but has not yet been fully released. My primary role was designing and scripting the game’s introductory missions, which teach new players the core mechanics and systems. This involved crafting a smooth and engaging onboarding experience that introduces controls, objectives, and sandbox elements in a clear and intuitive way. These early missions were key to setting the tone for player engagement and ensuring a strong first impression of the game world.</p>
-                                    <p><a class="more-link" href="https://arran-d-smedley.itch.io/user-interface-project" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
+                                    <p><a class="more-link" href="" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->                          
                             </div><!--//item-->
                             <div class="item row">
@@ -213,9 +213,9 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.viavisolutions.com/en-us">Viavi Solutions</a></span> <span class="year">(June 2019 - September 2019)</span></h3>
-                                <p> - Contributed to secure geo-location data workflows using <b>C#</b>.
-                                    - Collaborated with QA and development to resolve high-priority bugs and automate test cases.
-                                    - Supported customer deliverables during project deadlines.
+                                <p> - Contributed to secure geo-location data workflows using <b>C#</b>.<br>
+                                    - Collaborated with QA and development to resolve high-priority bugs and automate test cases.<br>
+                                    - Supported customer deliverables during project deadlines.<br>
                                 </p>
                             </div><!--//item-->
                            
