--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.viavisolutions.com/en-us">Viavi Solutions</a></span> <span class="year">(June 2019 - September 2019)</span></h3>
-                                <p> - Contributed to secure geo-location data workflows using. <b>C#</b>.<br>
+                                <p> - Contributed to secure geo-location data workflows using <b>C#</b>.<br>
                                     - Collaborated with QA and development to resolve high-priority bugs and automate test cases.<br>
                                     - Supported customer deliverables during project deadlines.<br>
                                 </p>
